CMake flash target changes

--- a/01-EnvironmentAndBuildSystem/project-template-cross/src/CMakeLists.txt
+++ b/01-EnvironmentAndBuildSystem/project-template-cross/src/CMakeLists.txt
@@ -25,5 +25,5 @@ target_link_libraries(stm32f4-blink
 stm32_print_size_of_target(stm32f4-blink)
 stm32_generate_binary_file(stm32f4-blink)
 
-# add flash target
 include(${PROJECT_SOURCE_DIR}/cmake/stm32/stlink.cmake)
+st_link_flash(stm32f4-blink)
