--- a/02-STM32-projects/.vscode/settings.json
+++ b/02-STM32-projects/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
   "files.associations": {
-    "vector": "cpp"
-  }
+    "vector": "cpp",
+    "iosfwd": "cpp",
+    "limits": "cpp",
+    "streambuf": "cpp"
+  },
+  "cortex-debug.variableUseNaturalFormat": false
 }
