--- a/02-STM32-projects/CMakeLists.txt
+++ b/02-STM32-projects/CMakeLists.txt
@@ -9,11 +9,13 @@ project(
 list(APPEND CMAKE_MODULE_PATH
   "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
+set(DEVICE STM32F401CC)
+
 # fetch CMSIS and HAL
 stm32_fetch_cmsis(F4)
 #stm32_fetch_hal(F4)
 
-find_package(CMSIS COMPONENTS STM32F401CC REQUIRED)
+find_package(CMSIS COMPONENTS ${DEVICE} REQUIRED)
 #find_package(HAL COMPONENTS STM32F4 REQUIRED)
 
 add_subdirectory(src)
