--- a/02-STM32-projects/src/stm32f401-devices/CMakeLists.txt
+++ b/02-STM32-projects/src/stm32f401-devices/CMakeLists.txt
@@ -4,13 +4,15 @@ set(TARGET "stm32f401-devices")
 
 add_library(${TARGET})
 target_sources(${TARGET}
-  PRIVATE
+  PUBLIC
     "include/Gpio.hpp"
     "include/Clock.hpp"
     "include/CycleCounter.hpp"
-
+    "include/GeneralPurposeTimer.hpp"
+  PRIVATE
     "src/Clock.cpp"
     "src/CycleCounter.cpp"
+    "src/GeneralPurposeTimer.cpp"
     
 )
 
