--- a/02-STM32-projects/src/CMakeLists.txt
+++ b/02-STM32-projects/src/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(external-devices)
 add_subdirectory(blink-first-example)
 add_subdirectory(blink-gpio-interface)
 add_subdirectory(shift-registers-example)
+add_subdirectory(timer-interface-test)
