Added Ultrasonic distance measurement with seven segment display.

--- a/02-STM32-projects/src/CMakeLists.txt
+++ b/02-STM32-projects/src/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(blink-first-example)
 add_subdirectory(blink-gpio-interface)
 add_subdirectory(shift-registers-example)
 add_subdirectory(timer-interface-test)
+add_subdirectory(ultrasonic-measure)
