--- a/02-STM32-projects/src/external-devices/CMakeLists.txt
+++ b/02-STM32-projects/src/external-devices/CMakeLists.txt
@@ -7,6 +7,7 @@ target_sources(${TARGET}
     PRIVATE
       "include/Piso.hpp"
       "include/Sipo.hpp"
+      "include/SevenSegmentDisplay.hpp"
 
 )
 
