Added C++ compiler flags.

--- a/02-STM32-projects/src/stm32f401-devices/CMakeLists.txt
+++ b/02-STM32-projects/src/stm32f401-devices/CMakeLists.txt
@@ -13,21 +13,21 @@ target_sources(${TARGET}
     "src/Clock.cpp"
     "src/CycleCounter.cpp"
     "src/GeneralPurposeTimer.cpp"
-    
 )
 
 target_include_directories(${TARGET}
-    PRIVATE
-      src
-    PUBLIC
-      include
+  PRIVATE
+    src
+  PUBLIC
+    include
 )
 
 target_compile_features(${TARGET}
-  PUBLIC
+  PRIVATE
     cxx_std_17)
 
 target_link_libraries(${TARGET}
   PUBLIC
     CMSIS::STM32::F401CC
-    STM32::NoSys)
+    STM32::NoSys
+    STM32::Nano)
