Shift registers example source rename.

--- a/02-STM32-projects/src/shift-registers-example/CMakeLists.txt
+++ b/02-STM32-projects/src/shift-registers-example/CMakeLists.txt
@@ -5,7 +5,7 @@ set(TARGET "shift-registers-example")
 add_executable(${TARGET})
 target_sources(${TARGET}
   PRIVATE
-    shiftregs.cpp
+    ShiftRegs.cpp
 )
 
 target_compile_features(${TARGET}
