Added `ComInterface` to CMakeLists

--- a/02-STM32-projects/src/stm32f401-devices/CMakeLists.txt
+++ b/02-STM32-projects/src/stm32f401-devices/CMakeLists.txt
@@ -9,6 +9,7 @@ target_sources(${TARGET}
     "include/Clock.hpp"
     "include/CycleCounter.hpp"
     "include/GeneralPurposeTimer.hpp"
+    "include/ComInterface.hpp"
   PRIVATE
     "src/Clock.cpp"
     "src/GeneralPurposeTimer.cpp"
