Updated GPIO alternate functions interface.

--- a/02-STM32-projects/src/stm32f401-devices/CMakeLists.txt
+++ b/02-STM32-projects/src/stm32f401-devices/CMakeLists.txt
@@ -6,6 +6,8 @@ add_library(${TARGET})
 target_sources(${TARGET}
   PUBLIC
     "include/Gpio.hpp"
+    "include/GpioTypes.hpp"
+    "include/GpioAlternateFunctions.hpp"
     "include/Clock.hpp"
     "include/CycleCounter.hpp"
     "include/GeneralPurposeTimer.hpp"
