Added GPIO external interrupts and updated COM interface.

--- a/02-STM32-projects/src/stm32f401-devices/CMakeLists.txt
+++ b/02-STM32-projects/src/stm32f401-devices/CMakeLists.txt
@@ -8,6 +8,7 @@ target_sources(${TARGET}
     "include/Gpio.hpp"
     "include/GpioTypes.hpp"
     "include/GpioAlternateFunctions.hpp"
+    "include/ExternalInterruptController.hpp"
     "include/Clock.hpp"
     "include/CycleCounter.hpp"
     "include/GeneralPurposeTimer.hpp"
@@ -15,6 +16,7 @@ target_sources(${TARGET}
   PRIVATE
     "src/Clock.cpp"
     "src/GeneralPurposeTimer.cpp"
+    "src/ExternalInterruptController.cpp"
 )
 
 target_include_directories(${TARGET}
