Added External Interrupts test program.

--- a/02-STM32-projects/src/CMakeLists.txt
+++ b/02-STM32-projects/src/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(blink-gpio-interface)
 add_subdirectory(shift-registers-example)
 add_subdirectory(timer-interface-test)
 add_subdirectory(ultrasonic-measure)
+add_subdirectory(external-interrupt)
