--- a/02-STM32-projects/src/CMakeLists.txt
+++ b/02-STM32-projects/src/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(shift-registers-example)
 add_subdirectory(timer-interface-test)
 add_subdirectory(ultrasonic-measure)
 add_subdirectory(external-interrupt)
+add_subdirectory(software-pwm)
