Finished I2C - serial communication protocol.

--- a/02-STM32-projects/src/stm32f401-devices/CMakeLists.txt
+++ b/02-STM32-projects/src/stm32f401-devices/CMakeLists.txt
@@ -12,11 +12,13 @@ target_sources(${TARGET}
     "include/Clock.hpp"
     "include/CycleCounter.hpp"
     "include/GeneralPurposeTimer.hpp"
-    "include/ComInterface.hpp"    
+    "include/ComInterface.hpp"
+    "include/I2C.hpp"
   PRIVATE
     "src/Clock.cpp"
     "src/GeneralPurposeTimer.cpp"
-    "src/ExternalInterruptController.cpp"    
+    "src/ExternalInterruptController.cpp"
+    "src/I2C.cpp"    
 )
 
 target_include_directories(${TARGET}
