--- a/02-STM32-projects/src/CMakeLists.txt
+++ b/02-STM32-projects/src/CMakeLists.txt
@@ -10,3 +10,4 @@ add_subdirectory(timer-interface-test)
 add_subdirectory(ultrasonic-measure)
 add_subdirectory(external-interrupt)
 add_subdirectory(software-pwm)
+add_subdirectory(serial-eeprom)
