Moved device drivers to `lib` folder.

--- a/02-STM32-projects/CMakeLists.txt
+++ b/02-STM32-projects/CMakeLists.txt
@@ -20,4 +20,5 @@ find_package(CMSIS COMPONENTS ${DEVICE} REQUIRED)
 
 find_package(FsmGenerator REQUIRED)
 
+add_subdirectory(lib)
 add_subdirectory(src)
