Added separate targets for each external device, updated Timer static pin check.

--- a/02-STM32-projects/.vscode/settings.json
+++ b/02-STM32-projects/.vscode/settings.json
@@ -44,7 +44,13 @@
     "ranges": "cpp",
     "stdexcept": "cpp",
     "cinttypes": "cpp",
-    "typeinfo": "cpp"
+    "typeinfo": "cpp",
+    "chrono": "cpp",
+    "ctime": "cpp",
+    "ratio": "cpp",
+    "iostream": "cpp",
+    "istream": "cpp",
+    "sstream": "cpp"
   },
   "cortex-debug.variableUseNaturalFormat": false
 }
