--- a/02-STM32-projects/lib/external-devices/CMakeLists.txt
+++ b/02-STM32-projects/lib/external-devices/CMakeLists.txt
@@ -1,27 +1,4 @@
 cmake_minimum_required(VERSION 3.18)
 
-set(TARGET "external-devices")
-
-add_library(${TARGET})
-target_sources(${TARGET}
-  PRIVATE
-    "include/Piso.hpp"
-    "include/Sipo.hpp"
-    "include/SevenSegmentDisplay.hpp"
-)
-
-target_include_directories(${TARGET}
-  PRIVATE
-    src
-  PUBLIC
-    include
-)
-
-target_compile_features(${TARGET}
-  PRIVATE
-    cxx_std_17)
-
-target_link_libraries(${TARGET}
-  PUBLIC
-    stm32f401-devices
-)
+add_subdirectory(shift-registers)
+add_subdirectory(sseg-display)
