--- a/02-STM32-projects/src/shift-registers-example/CMakeLists.txt
+++ b/02-STM32-projects/src/shift-registers-example/CMakeLists.txt
@@ -15,7 +15,7 @@ target_compile_features(${TARGET}
 target_link_libraries(${TARGET}
   PUBLIC
     stm32f401-devices
-    external-devices
+    shift-registers
 )
 
 stm32_print_size_of_target(${TARGET})
