--- a/02-STM32-projects/src/serial-eeprom/CMakeLists.txt
+++ b/02-STM32-projects/src/serial-eeprom/CMakeLists.txt
@@ -15,6 +15,7 @@ target_compile_features(${TARGET}
 target_link_libraries(${TARGET}
   PUBLIC
     stm32f401-devices
+    serial-eeprom
 )
 
 stm32_print_size_of_target(${TARGET})
