I2C read fix and EEPROM byte write fix.

--- a/02-STM32-projects/src/CMakeLists.txt
+++ b/02-STM32-projects/src/CMakeLists.txt
@@ -7,4 +7,4 @@ add_subdirectory(timer-interface-test)
 add_subdirectory(ultrasonic-measure)
 add_subdirectory(external-interrupt)
 add_subdirectory(software-pwm)
-add_subdirectory(serial-eeprom)
+add_subdirectory(serial-eeprom-example)
