Feature/serial eeprom interface (#1)
* Added `SerialEeprom` interface.

* Updated `serial-eeprom-example` to use the new `SerialEeprom` interface.

* I2C read fix and EEPROM byte write fix.

Co-authored-by: Angela Nikodinovska <nikodinovskaa4@hotmail.com>

--- a/02-STM32-projects/src/serial-eeprom-example/CMakeLists.txt
+++ b/02-STM32-projects/src/serial-eeprom-example/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.18)
 
-set(TARGET "serial-eeprom")
+set(TARGET "serial-eeprom-example")
 
 add_executable(${TARGET})
 target_sources(${TARGET}
@@ -15,6 +15,7 @@ target_compile_features(${TARGET}
 target_link_libraries(${TARGET}
   PUBLIC
     stm32f401-devices
+    serial-eeprom
 )
 
 stm32_print_size_of_target(${TARGET})
