--- a/02-STM32-projects/lib/external-devices/CMakeLists.txt
+++ b/02-STM32-projects/lib/external-devices/CMakeLists.txt
@@ -3,3 +3,4 @@ cmake_minimum_required(VERSION 3.18)
 add_subdirectory(shift-registers)
 add_subdirectory(sseg-display)
 add_subdirectory(serial-eeprom)
+add_subdirectory(oled-display)
