--- a/02-STM32-projects/src/CMakeLists.txt
+++ b/02-STM32-projects/src/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(ultrasonic-measure)
 add_subdirectory(external-interrupt)
 add_subdirectory(software-pwm)
 add_subdirectory(serial-eeprom-example)
+add_subdirectory(oled-display-example)
