Added SPI interface

--- a/02-STM32-projects/lib/stm32f401-devices/CMakeLists.txt
+++ b/02-STM32-projects/lib/stm32f401-devices/CMakeLists.txt
@@ -14,11 +14,13 @@ target_sources(${TARGET}
     "include/GeneralPurposeTimer.hpp"
     "include/ComInterface.hpp"
     "include/I2C.hpp"
+    "include/SPI.hpp"
   PRIVATE
     "src/Clock.cpp"
     "src/GeneralPurposeTimer.cpp"
     "src/ExternalInterruptController.cpp"
-    "src/I2C.cpp"    
+    "src/I2C.cpp" 
+    "src/SPI.cpp"   
 )
 
 target_include_directories(${TARGET}
