--- a/02-STM32-projects/src/CMakeLists.txt
+++ b/02-STM32-projects/src/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(external-interrupt)
 add_subdirectory(software-pwm)
 add_subdirectory(serial-eeprom-example)
 add_subdirectory(oled-display-example)
+add_subdirectory(spi-example)
