WIP ILI9486 TFT LCD interface.

--- a/02-STM32-projects/lib/external-devices/CMakeLists.txt
+++ b/02-STM32-projects/lib/external-devices/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(shift-registers)
 add_subdirectory(sseg-display)
 add_subdirectory(serial-eeprom)
 add_subdirectory(oled-display)
+add_subdirectory(tft-lcd)
