--- a/02-STM32-projects/src/CMakeLists.txt
+++ b/02-STM32-projects/src/CMakeLists.txt
@@ -10,3 +10,4 @@ add_subdirectory(software-pwm)
 add_subdirectory(serial-eeprom-example)
 add_subdirectory(oled-display-example)
 add_subdirectory(spi-example)
+add_subdirectory(tft-lcd-example)
