Added Touch interface.

--- a/02-STM32-projects/lib/external-devices/tft-lcd/CMakeLists.txt
+++ b/02-STM32-projects/lib/external-devices/tft-lcd/CMakeLists.txt
@@ -6,6 +6,7 @@ add_library(${TARGET} INTERFACE)
 target_sources(${TARGET}
   INTERFACE
     "include/TftLcd.hpp"
+    "include/Touch.hpp"
 )
 
 target_include_directories(${TARGET}
