TFT LCD and touch interface. (#6)
* WIP ILI9486 TFT LCD interface.

* LCD is working.

* Added Touch interface.

* Fixed SPI transfer for touch.

Co-authored-by: Angela Nikodinovska <nikodinovskaa4@hotmail.com>

--- a/02-STM32-projects/.vscode/launch.json
+++ b/02-STM32-projects/.vscode/launch.json
@@ -136,6 +136,18 @@
     "interface": "swd",
     "svdFile": "${workspaceRoot}/svd/STM32F401.svd",
     "runToEntryPoint": "main"
+  },
+  {
+    "name": "TFT LCD example",
+    "type": "cortex-debug",
+    "request": "launch",
+    "cwd": "${workspaceRoot}",
+    "executable": "${workspaceRoot}/build/STM32-projects/src/tft-lcd-example/RelWithDebInfo/tft-lcd-example.elf",
+    "servertype": "jlink",
+    "device": "STM32F401CC",
+    "interface": "swd",
+    "svdFile": "${workspaceRoot}/svd/STM32F401.svd",
+    "runToEntryPoint": "main"
   }
   ]
 }
