--- a/lib/stm32f401-devices/CMakeLists.txt
+++ b/lib/stm32f401-devices/CMakeLists.txt
@@ -37,6 +37,6 @@ target_compile_features(${TARGET}
 target_link_libraries(${TARGET}
   PUBLIC
     #cfsm-generator
-    $<IF:$<STREQUAL:${DEVICE},STM32F401CC>,CMSIS::STM32::F401CC,CMSIS::STM32::F411CE>
+    ${CMSIS_LIBRARY}
     STM32::NoSys
     STM32::Nano)
