Moved peripherals library sources and headers in new directory.

--- a/src/shift-registers-example/CMakeLists.txt
+++ b/src/shift-registers-example/CMakeLists.txt
@@ -14,7 +14,7 @@ target_compile_features(${TARGET}
 
 target_link_libraries(${TARGET}
   PUBLIC
-    stm32f401-devices
+    stm32f4x1-devices
     shift-registers
 )
 
