--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.18)
 
-add_subdirectory(stm32f401-devices)
+add_subdirectory(stm32f4x1-devices)
 add_subdirectory(external-devices)
