SPI TFT LCD works, code refactoring .

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,7 +51,8 @@
     "iostream": "cpp",
     "istream": "cpp",
     "sstream": "cpp",
-    "bitset": "cpp"
+    "bitset": "cpp",
+    "cstring": "cpp"
   },
   "cortex-debug.variableUseNaturalFormat": false
 }
