--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory(serial-eeprom-example)
 add_subdirectory(oled-display-example)
 add_subdirectory(spi-example)
 add_subdirectory(tft-lcd-example)
+add_subdirectory(tinyusb-example)
