--- a/lib/external-devices/tft-lcd/CMakeLists.txt
+++ b/lib/external-devices/tft-lcd/CMakeLists.txt
@@ -6,7 +6,11 @@ add_library(${TARGET} INTERFACE)
 target_sources(${TARGET}
   INTERFACE
     "include/TftLcd.hpp"
+    "include/TftLcdCommands.hpp"
+    "include/TftLcdGpio.hpp"
+    "include/TftLcdSpi.hpp"
     "include/Touch.hpp"
+    "include/TouchCalibration.hpp"
 )
 
 target_include_directories(${TARGET}
