Added tinyusb CDC library.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -2,3 +2,4 @@ cmake_minimum_required(VERSION 3.18)
 
 add_subdirectory(stm32f4x1-devices)
 add_subdirectory(external-devices)
+add_subdirectory(usb)
