--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,3 +12,4 @@ add_subdirectory(oled-display-example)
 add_subdirectory(spi-example)
 add_subdirectory(tft-lcd-example)
 add_subdirectory(tinyusb-example)
+add_subdirectory(serial-usb-example)
