TinyUsb for USB CDC (#10)
* WIP Adding tinyusb cmake target.

* Fixed cmake var name.

* Fixing CMake error of tinyusb target added multiple times.

* WIP adding tinyusb MSC example, not compiling.

* WIP trying out interface library for tinyusb

* Tinyusb example build works.

* Sorting out linking with required CMSIS/HAL for tinyusb.

* Tinyusb target rename and not fetching HAL.

* TinyUsb config changes.

* MSC tinyusb example is working.

* Added tinyusb CDC library.

* Added `SerialUsb` interface.

* Adding SerialUsb example.

* SerialUsb init and write is working, read not tested yet.

* Added `readUntil` function in `SerialUsb`.

* Updated `SerialUsb` example.

* Updated example.

* Guess the number for `SerialUsb` testing.

* TinyUsb MSC example build fix.

* MSC example link order fix.

Co-authored-by: Angela Nikodinovska <nikodinovskaa4@hotmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,29 +13,31 @@ list(APPEND CMAKE_MODULE_PATH
 
 option(STM32F4X1_GENERATE_FLASH_TARGETS "Add JLink and ST-link flash targets" ON)
 
+# add preprocessor definitions
+add_compile_definitions(
+  DEVICE=${DEVICE}
+)
+
 # fetch CMSIS
 stm32_fetch_cmsis(F4)
 # fetch HAL
 # stm32_fetch_hal(F4)
 
 find_package(CMSIS COMPONENTS ${DEVICE} REQUIRED)
-# find_package(HAL COMPONENTS STM32F4 REQUIRED)
+# find_package(HAL COMPONENTS ${DEVICE} REQUIRED)
 
-# fetch additional libraries
-find_package(FsmGenerator REQUIRED)
-find_package(EmbeddedGfx REQUIRED)
-
-# set cmsis library for linking based on device
+# set cmsis and hal library for linking based on device
 if(DEVICE STREQUAL "STM32F401CC")
   set(CMSIS_LIBRARY CMSIS::STM32::F401CC)
 elseif(DEVICE STREQUAL "STM32F411CE")
   set(CMSIS_LIBRARY CMSIS::STM32::F411CE)
 endif()
+# set(HAL_LIBRARY HAL::STM32::F4)
 
-# add preprocessor definitions
-add_compile_definitions(
-  DEVICE=${DEVICE}
-)
+# fetch additional libraries
+find_package(TinyUsb REQUIRED)
+find_package(FsmGenerator REQUIRED)
+find_package(EmbeddedGfx REQUIRED)
 
 add_subdirectory(lib)
 add_subdirectory(src)
