--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory(spi-example)
 add_subdirectory(tft-lcd-example)
 add_subdirectory(tinyusb-example)
 add_subdirectory(serial-usb-example)
+add_subdirectory(freertos-example)
