Added RTC example.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,3 +14,4 @@ add_subdirectory(tft-lcd-example)
 add_subdirectory(tinyusb-example)
 add_subdirectory(serial-usb-example)
 add_subdirectory(freertos-example)
+add_subdirectory(rtc-test)
